--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "open-nomie",
-  "version": "4.0.52",
+  "version": "4.0.53",
   "homepage": "https://nomie.app",
   "bugs": {
     "url": "https://github.com/open-nomie/nomie/issues",
@@ -21,7 +21,9 @@
     "start": "sirv public --single",
     "start:dev": "sirv public --cors --single --dev",
     "patch": "node build-tools/patch-version.js",
-    "test:unit": "jest src/**/*.spec.js"
+    "test:unit": "jest src/**/*.spec.js",
+    "todo": "leasot -x --reporter markdown 'src/**/*.js' > TODO.md",
+    "commit": "npm run patch && npm run todo && git add TODO.md && git add package.json && git commit"
   },
   "devDependencies": {
     "@kazzkiq/svelte-preprocess-scss": "^0.1.3",
@@ -29,6 +31,7 @@
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.1",
     "jest": "^24.8.0",
+    "leasot": "^8.0.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "nomie-uom": "^1.0.2",
