Adding FAQ / Refactoring Config
- Moving config to /config - and out of store
- Created FAQ route and config/faq

--- a/package.json
+++ b/package.json
@@ -15,23 +15,22 @@
     "build": "node build-tools/bust-cache.js && rollup -c",
     "autobuild": "rollup -c -w",
     "scss": "node-sass ./src/scss/main.scss --output=./public --watch=./src/scss/**/*.scss --include-path",
-    "watch:scss": "nodemon -e scss -x \"npm run scss\"",
     "dev": "concurrently \"run-p start:dev autobuild\" \"npm run scss\"",
-    "dev-original": "run-p start:dev autobuild",
     "start": "sirv public --single",
     "start:dev": "sirv public --cors --single --dev",
     "patch": "node build-tools/patch-version.js",
-    "test:unit": "jest src/**/*.spec.js",
-    "todo": "leasot -x --reporter markdown 'src/**/*.js' > TODO.md",
-    "commit": "npm run patch && npm run todo && git add TODO.md && git add package.json && git commit"
+    "test": "jest src/**/*.spec.js",
+    "todo": "node build-tools/get-todo.js",
+    "commit-all": "npm run patch && npm run todo && git add . && git commit"
   },
   "devDependencies": {
     "@kazzkiq/svelte-preprocess-scss": "^0.1.3",
     "@sveltejs/gestures": "0.0.1",
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.1",
+    "find-in-files": "^0.5.0",
+    "git-release-notes": "^4.0.1",
     "jest": "^24.8.0",
-    "leasot": "^8.0.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "nomie-uom": "^1.0.2",
