--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "open-nomie",
-  "version": "4.0.57",
+  "version": "4.0.58",
   "homepage": "https://nomie.app",
   "bugs": {
     "url": "https://github.com/open-nomie/nomie/issues",
@@ -28,6 +28,7 @@
     "@sveltejs/gestures": "0.0.1",
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.1",
+    "emoji-search": "^1.0.0",
     "find-in-files": "^0.5.0",
     "git-release-notes": "^4.0.1",
     "jest": "^24.8.0",
