--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,17 +8,17 @@
   "background_color": "#4d84a1",
   "icons": [
     {
-      "src": "https://open.nomie.app/images/icon.png",
+      "src": "http://localhost:5000/images/icon/nomie-400.png",
       "sizes": "400x400",
       "type": "image/png"
     },
     {
-      "src": "https://open.nomie.app/images/icon.png",
+      "src": "http://localhost:5000/images/icon/nomie-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://open.nomie.app/images/icon.png",
+      "src": "http://localhost:5000/images/icon/nomie-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
