--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "open-nomie",
-  "version": "4.1.18",
+  "version": "4.1.19",
   "homepage": "https://nomie.app",
   "bugs": {
     "url": "https://github.com/open-nomie/nomie/issues",
@@ -25,6 +25,7 @@
     "cypress": "cypress open"
   },
   "devDependencies": {
+    "@composi/gestures": "^1.0.8",
     "@kazzkiq/svelte-preprocess-scss": "^0.1.3",
     "@sveltejs/gestures": "0.0.1",
     "bootstrap": "^4.3.1",
