--- a/package.json
+++ b/package.json
@@ -28,13 +28,18 @@
     "@composi/gestures": "^1.0.8",
     "@kazzkiq/svelte-preprocess-scss": "^0.1.3",
     "@sveltejs/gestures": "0.0.1",
+    "blockstack": "^19.2.5",
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.1",
     "cypress": "^3.4.0",
+    "esri-leaflet": "^2.3.0",
+    "esri-leaflet-geocoder": "^2.2.14",
     "find-in-files": "^0.5.0",
     "git-release-notes": "^4.0.1",
     "jest": "^24.8.0",
+    "leaflet": "^1.5.1",
     "localforage": "^1.7.3",
+    "material-design-iconic-font": "^2.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "nomie-uom": "^1.0.2",
@@ -42,6 +47,7 @@
     "pre-commit": "^1.2.2",
     "rollup": "^1.10.1",
     "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
