--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "start_url": "http://localhost:5000",
   "description": "Private Mood & Life Tracker",
   "display": "standalone",
-  "theme_color": "#4d84a1",
-  "background_color": "#4d84a1",
+  "theme_color": "#319ed7",
+  "background_color": "#319ed7",
   "lang": "en-us",
   "icons": [
     {
