--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "open-nomie",
-  "version": "4.2.12",
+  "version": "4.2.14",
   "homepage": "https://nomie.app",
   "bugs": {
     "url": "https://github.com/open-nomie/nomie/issues",
@@ -18,8 +18,8 @@
     "dev": "node build-tools/move-resources.js && concurrently \"run-p start:dev autobuild\" \"npm run scss\"",
     "dev:ip": "node build-tools/move-resources.js && concurrently \"run-p start:ip autobuild\" \"npm run scss\"",
     "start": "sirv public --single",
-    "start:dev": "sirv public --cors --single --dev ",
-    "start:ip": "sirv public --cors --single --dev --host 0.0.0.0",
+    "start:og": "sirv public --cors --single --dev ",
+    "start:dev": "sirv public --cors --single --dev --host 0.0.0.0",
     "patch_version": "node build-tools/patch-version.js",
     "test": "jest src/**/*.spec.js",
     "todo": "node build-tools/get-todo.js",
@@ -40,6 +40,7 @@
     "esri-leaflet-geocoder": "^2.2.14",
     "find-in-files": "^0.5.0",
     "git-release-notes": "^4.0.1",
+    "i18next": "^17.0.16",
     "jest": "^24.8.0",
     "leaflet": "^1.5.1",
     "localforage": "^1.7.3",
