--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "open-nomie",
-  "version": "4.2.16",
+  "version": "4.2.18",
   "homepage": "https://nomie.app",
   "bugs": {
     "url": "https://github.com/open-nomie/nomie/issues",
@@ -60,6 +60,7 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-visualizer": "^2.6.0",
     "sass-loader": "^7.1.0",
     "semver": "^6.2.0",
     "sirv-cli": "^0.4.4",
