--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "open-nomie",
-  "version": "4.3.14",
+  "version": "4.3.15",
   "homepage": "https://nomie.app",
   "bugs": {
     "url": "https://github.com/open-nomie/nomie/issues",
@@ -36,6 +36,8 @@
     "copy": "^0.3.2",
     "cypress": "^3.4.0",
     "dom-to-image-chrome-fix": "^2.6.0",
+    "eslint": "^6.6.0",
+    "eslint-plugin-svelte3": "^2.7.3",
     "esri-leaflet": "^2.3.0",
     "esri-leaflet-geocoder": "^2.2.14",
     "find-in-files": "^0.5.0",
