--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "open-nomie",
-  "version": "4.5.17",
+  "version": "4.6.0",
   "homepage": "https://nomie.app",
   "bugs": {
     "url": "https://github.com/open-nomie/nomie/issues",
@@ -20,10 +20,12 @@
     "start": "sirv public --single",
     "start:og": "sirv public --cors --single --dev ",
     "start:dev": "sirv public --cors --single --dev --host 0.0.0.0",
-    "patch_version": "node build-tools/patch-version.js",
+    "version_patch": "node build-tools/patch-version.js patch",
+    "version_minor": "node build-tools/patch-version.js minor",
     "test": "jest src/**/*.spec.js",
     "todo": "node build-tools/get-todo.js",
-    "patch": "npm run patch_version && npm run todo",
+    "patch": "npm run version_patch && npm run todo",
+    "minor": "npm run version_minor && npm run todo",
     "cypress": "cypress open"
   },
   "devDependencies": {
