--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "node-sass": "^4.12.0",
     "nomie-uom": "^1.0.2",
     "npm-run-all": "^4.1.5",
-    "pre-commit": "^1.2.2",
+    "pouchdb": "^7.1.1",
     "rollup": "^1.10.1",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-copy": "^3.1.0",
@@ -71,13 +71,13 @@
     "style-loader": "^0.23.1",
     "svelte": "^3.0.0",
     "svelte-preprocess-css-global": "0.0.1",
-    "svelte-routing": "^1.2.0"
+    "svelte-routing": "^1.2.0",
+    "jslib-html5-camera-photo": "^3.0.2-beta.0"
   },
   "dependencies": {
     "d3-scale": "^3.0.0",
     "dayjs": "^1.8.14",
     "dom-to-image-more": "^2.8.0",
-    "jslib-html5-camera-photo": "^3.0.2-beta.0",
     "md5": "^2.2.1",
     "svelte-awesome": "^1.4.1",
     "svelte-loader": "^2.13.4",
