--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "todo": "node build-tools/get-todo.js",
     "patch": "npm run version_patch && npm run todo",
     "minor": "npm run version_minor && npm run todo",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "release:patch": "release-it patch --no-npm.publish",
+    "release:minor": "release-it minor --no-npm.publish"
   },
   "devDependencies": {
     "@composi/gestures": "^1.0.8",
@@ -54,6 +56,7 @@
     "nomie-uom": "^1.0.2",
     "npm-run-all": "^4.1.5",
     "pouchdb": "^7.1.1",
+    "release-it": "^12.4.3",
     "rollup": "^1.10.1",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-copy": "^3.1.0",
