--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "semver": "^6.2.0",
     "sirv-cli": "^0.4.4",
     "style-loader": "^0.23.1",
-    "svelte": "^3.0.0",
+    "svelte": "^3.19.2",
     "svelte-preprocess-css-global": "0.0.1",
     "svelte-routing": "^1.2.0"
   },
@@ -80,8 +80,10 @@
     "d3-scale": "^3.0.0",
     "dayjs": "^1.8.14",
     "dom-to-image-more": "^2.8.0",
+    "fusioncharts": "^3.15.1",
     "md5": "^2.2.1",
     "svelte-awesome": "^1.4.1",
+    "svelte-fusioncharts": "^1.0.0",
     "svelte-loader": "^2.13.4",
     "svelte-spinner": "^2.0.1"
   },
