--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-visualizer": "^2.6.0",
+    "rollup-plugin-workbox": "^5.0.1",
     "sass-loader": "^7.1.0",
     "semver": "^6.2.0",
     "sirv-cli": "^0.4.4",
