--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "rollup-plugin-visualizer": "^2.6.0",
     "rollup-plugin-workbox": "^5.0.1",
     "sass-loader": "^7.1.0",
+    "search-text-tokenizer": "^2.1.1",
     "semver": "^6.2.0",
     "sirv-cli": "^0.4.4",
     "style-loader": "^0.23.1",
