--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,55 +12,55 @@
   "scope": "/",
   "icons": [
     {
-      "src": "/images/icons/nomie-android-48.png",
+      "src": "/images/icons/nomie-48.png",
       "sizes": "48x48",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/images/icons/nomie-android-72.png",
+      "src": "/images/icons/nomie-72.png",
       "sizes": "72x72",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/images/icons/nomie-android-96.png",
+      "src": "/images/icons/nomie-96.png",
       "sizes": "96x96",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/images/icons/nomie-android-114.png",
+      "src": "/images/icons/nomie-114.png",
       "sizes": "114x114",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/images/icons/nomie-android-168.png",
+      "src": "/images/icons/nomie-168.png",
       "sizes": "168x168",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/images/icons/nomie-android-400.png",
+      "src": "/images/icons/nomie-400.png",
       "sizes": "400x400",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/images/icons/nomie-android-192.png",
+      "src": "/images/icons/nomie-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     },
     {
-      "src": "/images/icons/nomie-android-400.png",
+      "src": "/images/icons/nomie-400.png",
       "sizes": "400x400",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/images/icons/nomie-android-512.png",
+      "src": "/images/icons/nomie-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
