--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://nomie.app"
   },
   "scripts": {
-    "build": "node build-tools/bust-cache.js && node build-tools/move-resources.js && node build-tools/bndle-vendors.js && rollup -c",
+    "build": "node build-tools/bust-cache.js && node build-tools/move-resources.js && rollup -c",
     "autobuild": "rollup -c -w",
     "scss": "node-sass ./src/scss/main.scss --output=./public --watch=./src/scss/**/*.scss --include-path",
     "dev": "node build-tools/move-resources.js && node build-tools/bundle-vendors.js && concurrently \"run-p start:dev autobuild\" \"npm run scss\"",
