--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@kazzkiq/svelte-preprocess-scss": "^0.1.3",
     "@release-it/conventional-changelog": "^1.1.0",
     "@sveltejs/gestures": "0.0.1",
+    "@sveltejs/svelte-virtual-list": "^3.0.1",
     "blockstack": "^19.3.0",
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.1",
