--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@composi/gestures": "^1.0.9",
     "@kazzkiq/svelte-preprocess-scss": "^0.1.3",
+    "@mapbox/timespace": "^2.0.4",
     "@release-it/conventional-changelog": "^1.1.0",
     "@sveltejs/gestures": "0.0.1",
     "@sveltejs/svelte-virtual-list": "^3.0.1",
