--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "open-nomie",
-  "version": "4.7.14",
+  "version": "4.7.15",
   "homepage": "https://nomie.app",
   "bugs": {
     "url": "https://github.com/open-nomie/nomie/issues",
@@ -38,6 +38,7 @@
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.1",
     "copy": "^0.3.2",
+    "copy-to-clipboard": "^3.3.1",
     "cypress": "^3.4.0",
     "dom-to-image-chrome-fix": "^2.6.0",
     "eslint": "^6.6.0",
