--- a/package.json
+++ b/package.json
@@ -37,68 +37,70 @@
     "@composi/gestures": "^1.0.9",
     "@kazzkiq/svelte-preprocess-scss": "^0.1.3",
     "@mapbox/timespace": "^2.0.4",
-    "@release-it/conventional-changelog": "^1.1.0",
+    "@release-it/conventional-changelog": "^1.1.4",
     "@sveltejs/gestures": "0.0.1",
     "@sveltejs/svelte-virtual-list": "^3.0.1",
     "blockstack": "^19.3.0",
     "bootstrap": "^4.3.1",
+    "carbon-icons-svelte": "^10.9.3",
     "concurrently": "^4.1.1",
     "copy": "^0.3.2",
     "cypress": "^4.4.0",
+    "d3-scale": "^3.0.0",
+    "dayjs": "^1.8.23",
     "dom-to-image-chrome-fix": "^2.6.0",
+    "dom-to-image-more": "^2.8.0",
     "eslint": "^6.6.0",
     "eslint-plugin-svelte3": "^2.7.3",
     "esri-leaflet": "^2.3.0",
     "esri-leaflet-geocoder": "^2.2.14",
     "find-in-files": "^0.5.0",
+    "fusioncharts": "^3.15.1",
     "git-release-notes": "^4.0.1",
     "html2canvas": "^1.0.0-rc.5",
     "i18next": "^17.0.16",
     "jest": "^24.8.0",
+    "json-loader": "^0.5.7",
     "leaflet": "^1.5.1",
     "localforage": "^1.7.3",
-    "material-design-iconic-font": "^2.2.0",
-    "mini-css-extract-plugin": "^0.7.0",
+    "md5": "^2.2.1",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "nomie-uom": "^1.0.2",
     "npm-run-all": "^4.1.5",
     "pouchdb": "^7.1.1",
-    "release-it": "^12.6.3",
-    "rollup": "^1.10.1",
+    "release-it": "^13.5.7",
+    "rollup": "^2.7.6",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-livereload": "^1.3.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-terser": "^5.3.0",
     "rollup-plugin-visualizer": "^2.6.0",
     "rollup-plugin-workbox": "^5.0.1",
     "sass-loader": "^7.1.0",
     "search-text-tokenizer": "^2.1.1",
     "semver": "^6.2.0",
     "sirv-cli": "^0.4.4",
+    "sortablejs": "^1.10.2",
     "style-loader": "^0.23.1",
     "svelte": "^3.20.1",
+    "svelte-awesome": "^1.4.1",
+    "svelte-fusioncharts": "^1.0.0",
+    "svelte-loader": "^2.13.6",
     "svelte-preprocess-css-global": "0.0.1",
     "svelte-routing": "^1.4.2",
     "svelte-sortable-list": "^1.1.0",
-    "svelte-spa-router": "^2.1.0"
+    "svelte-spa-router": "^2.1.0",
+    "svelte-spinner": "^2.0.1",
+    "svg-inline-loader": "^0.8.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
-  "dependencies": {
-    "carbon-icons-svelte": "^10.9.3",
-    "d3-scale": "^3.0.0",
-    "dayjs": "^1.8.23",
-    "dom-to-image-more": "^2.8.0",
-    "fusioncharts": "^3.15.1",
-    "md5": "^2.2.1",
-    "sortablejs": "^1.10.2",
-    "svelte-awesome": "^1.4.1",
-    "svelte-fusioncharts": "^1.0.0",
-    "svelte-loader": "^2.13.4",
-    "svelte-spinner": "^2.0.1"
-  },
+  "dependencies": {},
   "license": "MIT"
 }
