--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "nomie-uom": "^1.0.2",
+    "nomie-utils": "^0.1.4",
     "npm-run-all": "^4.1.5",
     "pouchdb": "^7.1.1",
     "release-it": "^13.5.7",
