enhance: Adding "Pick for me" using Euclidean distancing

--- a/package.json
+++ b/package.json
@@ -50,12 +50,13 @@
     "dayjs": "^1.8.23",
     "dom-to-image-chrome-fix": "^2.6.0",
     "dom-to-image-more": "^2.8.0",
+    "dynamic-time-warping": "^1.0.0",
     "eslint": "^6.6.0",
     "eslint-plugin-svelte3": "^2.7.3",
     "esri-leaflet": "^2.3.0",
     "esri-leaflet-geocoder": "^2.2.14",
+    "euclidean-distance": "^1.0.0",
     "find-in-files": "^0.5.0",
-    "fusioncharts": "^3.15.1",
     "git-release-notes": "^4.0.1",
     "html2canvas": "^1.0.0-rc.5",
     "i18next": "^17.0.16",
