--- a/package.json
+++ b/package.json
@@ -33,8 +33,24 @@
     "release:patch": "release-it patch --no-npm.publish",
     "release:minor": "release-it minor --no-npm.publish"
   },
-  "release-it": {},
+  "release-it": {
+    "git": {
+      "commitMessage": "chore: release v${version}"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "git-cz"
+    }
+  },
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "@composi/gestures": "^1.0.9",
     "@kazzkiq/svelte-preprocess-scss": "^0.1.3",
     "@mapbox/timespace": "^2.0.4",
@@ -44,6 +60,8 @@
     "blockstack": "^19.3.0",
     "bootstrap": "^4.3.1",
     "carbon-icons-svelte": "^10.9.3",
+    "commitizen": "^4.1.2",
+    "commitlint": "^8.3.5",
     "concurrently": "^4.1.1",
     "copy": "^0.3.2",
     "cypress": "^4.4.0",
@@ -61,6 +79,7 @@
     "git-release-notes": "^4.0.1",
     "gitlog": "^4.0.0",
     "html2canvas": "^1.0.0-rc.5",
+    "husky": "^4.2.5",
     "i18next": "^17.0.16",
     "jest": "^24.8.0",
     "json-loader": "^0.5.7",
