--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "scripts": {
     "generate-whatsnew": "node build-tools/generate-whats-new.js && git add . && git commit -m 'build: whats new'",
+    "release": "npm run generate-whatsnew &&  release-it --no-npm.publish",
+    "commit": "git cz",
     "build": "npm rebuild && node build-tools/bust-cache.js && node build-tools/move-resources.js && rollup -c",
     "autobuild": "rollup -c -w",
     "scss": "node-sass ./src/scss/main.scss --output=./public --watch=./src/scss/**/*.scss --include-path",
@@ -76,6 +78,7 @@
     "esri-leaflet-geocoder": "^2.2.14",
     "euclidean-distance": "^1.0.0",
     "find-in-files": "^0.5.0",
+    "git-cz": "^4.6.2",
     "git-release-notes": "^4.0.1",
     "gitlog": "^4.0.0",
     "html2canvas": "^1.0.0-rc.5",
