--- a/package.json
+++ b/package.json
@@ -88,14 +88,17 @@
     "json-loader": "^0.5.7",
     "latlon-geohash": "^2.0.0",
     "leaflet": "^1.5.1",
+    "lirm": "0.0.1",
     "localforage": "^1.7.3",
     "md5": "^2.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "nomie-uom": "^1.0.2",
-    "nomie-utils": "^0.1.7",
+    "nomie-utils": "^0.1.8",
     "npm-run-all": "^4.1.5",
     "pouchdb": "^7.1.1",
+    "r-squared": "0.0.0",
+    "regression": "^2.0.1",
     "release-it": "^13.5.7",
     "rollup": "^2.7.6",
     "rollup-plugin-commonjs": "^9.3.4",
