fix: importing of people

--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "generate-whatsnew": "node build-tools/generate-whats-new.js && git add . && git commit -m 'build: whats new'",
     "release": "npm run generate-whatsnew &&  release-it --no-npm.publish",
     "commit": "git cz",
-    "build": "npm rebuild && node build-tools/bust-cache.js && node build-tools/move-resources.js && rollup -c",
+    "pre:run": "node build-tools/bust-cache.js && node build-tools/move-resources.js && node build-tools/bundle-vendors.js",
+    "build": "npm run pre:run && rollup -c",
     "autobuild": "rollup -c -w",
     "scss": "node-sass ./src/scss/main.scss --output=./public --watch=./src/scss/**/*.scss --include-path",
-    "dev": "node build-tools/move-resources.js && node build-tools/bundle-vendors.js && concurrently \"run-p start:dev autobuild\" \"npm run scss\"",
+    "dev": "npm run pre:run && concurrently \"run-p start:dev autobuild\" \"npm run scss\"",
     "dev:ip": "node build-tools/move-resources.js && concurrently \"run-p start:ip autobuild\" \"npm run scss\"",
     "start": "sirv public --single",
     "start:og": "sirv public --cors --single --dev ",
