--- a/package.json
+++ b/package.json
@@ -56,10 +56,9 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@composi/gestures": "^1.0.9",
     "@kazzkiq/svelte-preprocess-scss": "^0.1.3",
-    "@mapbox/timespace": "^2.0.4",
     "@release-it/conventional-changelog": "^1.1.4",
+    "@rollup/plugin-typescript": "^5.0.1",
     "@sveltejs/gestures": "0.0.1",
-    "@sveltejs/svelte-virtual-list": "^3.0.1",
     "blockstack": "^19.3.0",
     "bootstrap": "^4.3.1",
     "carbon-icons-svelte": "^10.9.3",
@@ -68,7 +67,7 @@
     "concurrently": "^4.1.1",
     "copy": "^0.3.2",
     "cypress": "^4.4.0",
-    "d3-scale": "^3.0.0",
+    "d3-scale": "^3.2.1",
     "dayjs": "^1.8.23",
     "dom-to-image-chrome-fix": "^2.6.0",
     "dom-to-image-more": "^2.8.0",
@@ -85,12 +84,13 @@
     "html2canvas": "^1.0.0-rc.5",
     "husky": "^4.2.5",
     "i18next": "^17.0.16",
-    "jest": "^24.8.0",
+    "jest": "^26.1.0",
     "json-loader": "^0.5.7",
     "latlon-geohash": "^2.0.0",
     "leaflet": "^1.5.1",
     "lirm": "0.0.1",
     "localforage": "^1.7.3",
+    "lodash": "^4.17.15",
     "md5": "^2.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
@@ -99,7 +99,6 @@
     "npm-run-all": "^4.1.5",
     "pouchdb": "^7.1.1",
     "r-squared": "0.0.0",
-    "regression": "^2.0.1",
     "release-it": "^13.5.7",
     "rollup": "^2.7.6",
     "rollup-plugin-commonjs": "^9.3.4",
@@ -128,6 +127,7 @@
     "svelte-spa-router": "^2.1.0",
     "svelte-spinner": "^2.0.1",
     "svg-inline-loader": "^0.8.2",
+    "typescript": "^3.9.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
