--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@release-it/conventional-changelog": "^1.1.4",
     "@rollup/plugin-typescript": "^5.0.1",
     "@sveltejs/gestures": "0.0.1",
+    "@tsconfig/svelte": "^1.0.2",
     "blockstack": "^19.3.0",
     "bootstrap": "^4.3.1",
     "carbon-icons-svelte": "^10.9.3",
@@ -68,7 +69,7 @@
     "copy": "^0.3.2",
     "cypress": "^4.4.0",
     "d3-scale": "^3.2.1",
-    "dayjs": "^1.8.23",
+    "dayjs": "^1.8.30",
     "dom-to-image-chrome-fix": "^2.6.0",
     "dom-to-image-more": "^2.8.0",
     "dynamic-time-warping": "^1.0.0",
@@ -120,14 +121,16 @@
     "style-loader": "^0.23.1",
     "svelte": "^3.20.1",
     "svelte-awesome": "^1.4.1",
+    "svelte-check": "^0.1.55",
     "svelte-loader": "^2.13.6",
+    "svelte-preprocess": "^4.0.8",
     "svelte-preprocess-css-global": "0.0.1",
     "svelte-routing": "^1.4.2",
     "svelte-sortable-list": "^1.1.0",
     "svelte-spa-router": "^2.1.0",
     "svelte-spinner": "^2.0.1",
     "svg-inline-loader": "^0.8.2",
-    "typescript": "^3.9.6",
+    "typescript": "^3.9.7",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
