--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "blockstack": "^19.3.0",
     "bootstrap": "^4.3.1",
     "carbon-icons-svelte": "^10.9.3",
+    "chart.js": "^2.9.3",
     "commitizen": "^4.1.2",
     "commitlint": "^8.3.5",
     "concurrently": "^4.1.1",
