--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "start": "sirv public --single",
     "start:og": "sirv public --cors --single --dev ",
     "start:dev": "sirv public --cors --single --dev --host 0.0.0.0",
-    "test": "jest src/**/*.spec.js",
+    "test": "jest",
     "todo": "node build-tools/get-todo.js",
     "patch": "npm run version_patch && npm run todo",
     "minor": "npm run version_minor && npm run todo",
@@ -61,6 +61,7 @@
     "@rollup/plugin-typescript": "^5.0.1",
     "@sveltejs/gestures": "0.0.1",
     "@tsconfig/svelte": "^1.0.2",
+    "@types/jest": "^26.0.8",
     "blockstack": "^19.3.0",
     "bootstrap": "^4.3.1",
     "carbon-icons-svelte": "^10.9.3",
@@ -87,13 +88,13 @@
     "html2canvas": "^1.0.0-rc.5",
     "husky": "^4.2.5",
     "i18next": "^17.0.16",
-    "jest": "^26.1.0",
+    "jest": "^26.2.2",
     "json-loader": "^0.5.7",
     "latlon-geohash": "^2.0.0",
     "leaflet": "^1.5.1",
     "lirm": "0.0.1",
     "localforage": "^1.7.3",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "md5": "^2.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
@@ -102,7 +103,7 @@
     "npm-run-all": "^4.1.5",
     "pouchdb": "^7.1.1",
     "r-squared": "0.0.0",
-    "release-it": "^13.5.7",
+    "release-it": "^13.6.6",
     "rollup": "^2.7.6",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-copy": "^3.1.0",
@@ -132,6 +133,7 @@
     "svelte-spa-router": "^2.1.0",
     "svelte-spinner": "^2.0.1",
     "svg-inline-loader": "^0.8.2",
+    "ts-jest": "^26.1.4",
     "typescript": "^3.9.7",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
