chore: adding jest testing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,10 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
-    "types": ["jest"]
+    "types": ["jest"],
+    "esModuleInterop": true
   },
+
   "extends": "@tsconfig/svelte/tsconfig.json",
   "include": ["src/**/*", "src/node_modules"],
   "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
