--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     }
   },
   "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^9.1.1",
     "@kazzkiq/svelte-preprocess-scss": "^0.1.3",
@@ -60,6 +62,7 @@
     "@sveltejs/gestures": "0.0.1",
     "@tsconfig/svelte": "^1.0.2",
     "@types/jest": "^26.0.8",
+    "babel-jest": "^26.3.0",
     "commitizen": "^4.1.2",
     "commitlint": "^9.1.2",
     "concurrently": "^5.2.0",
@@ -82,14 +85,13 @@
     "html2canvas": "^1.0.0-rc.5",
     "husky": "^4.2.5",
     "i18next": "^17.0.16",
-    "jest": "^26.2.2",
+    "jest": "^26.4.0",
     "json-loader": "^0.5.7",
     "latlon-geohash": "^2.0.0",
     "leaflet": "^1.5.1",
     "lirm": "0.0.1",
     "localforage": "^1.7.3",
     "lodash": "^4.17.19",
-    "md5": "^2.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "nomie-uom": "^1.0.2",
@@ -116,6 +118,7 @@
     "svelte": "^3.20.1",
     "svelte-awesome": "^1.4.1",
     "svelte-check": "^0.1.55",
+    "svelte-jester": "^1.1.2",
     "svelte-loader": "^2.13.6",
     "svelte-preprocess": "^4.0.8",
     "svelte-preprocess-css-global": "0.0.1",
@@ -125,6 +128,7 @@
     "svelte-spinner": "^2.0.1",
     "svg-inline-loader": "^0.8.2",
     "ts-jest": "^26.1.4",
+    "ts-md5": "^1.2.7",
     "typescript": "^3.9.7",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
