chore: search setup

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^9.1.1",
     "@kazzkiq/svelte-preprocess-scss": "^0.1.3",
+    "@mya-zaki/advanced-search": "^1.0.0",
     "@release-it/conventional-changelog": "^1.1.4",
     "@rollup/plugin-typescript": "^5.0.1",
     "@sveltejs/gestures": "0.0.1",
@@ -135,14 +136,15 @@
     "yargs-parser": "^18.1.3"
   },
   "dependencies": {
+    "@composi/gestures": "^1.0.9",
     "blockstack": "^19.3.0",
     "bootstrap": "^4.3.1",
     "carbon-icons-svelte": "^10.9.3",
     "chart.js": "^2.9.3",
-    "sortablejs": "^1.10.2",
+    "es-simplify": "^1.0.6",
     "nomie-utils": "^0.1.10",
     "pouchdb": "^7.1.1",
-    "@composi/gestures": "^1.0.9"
+    "sortablejs": "^1.10.2"
   },
   "license": "MIT"
 }
