chore: start of csv importing

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@sveltejs/gestures": "0.0.1",
     "@tsconfig/svelte": "^1.0.2",
     "@types/jest": "^26.0.8",
+    "@types/papaparse": "^5.2.2",
     "babel-jest": "^26.3.0",
     "boolean-parser": "0.0.2",
     "commitizen": "^4.1.2",
@@ -98,6 +99,7 @@
     "node-sass": "^4.14.1",
     "nomie-uom": "^1.0.2",
     "npm-run-all": "^4.1.5",
+    "papaparse": "^5.3.0",
     "r-squared": "0.0.0",
     "release-it": "^13.6.6",
     "rollup": "^2.7.6",
