--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "svelte": "^3.20.1",
     "svelte-awesome": "^1.4.1",
     "svelte-check": "^0.1.55",
+    "svelte-hero-icons": "^1.0.5",
     "svelte-jester": "^1.1.2",
     "svelte-loader": "^2.13.6",
     "svelte-preprocess": "^4.0.8",
