refactor: adding lodash

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@sveltejs/gestures": "0.0.1",
     "@tsconfig/svelte": "^1.0.2",
     "@types/jest": "^26.0.8",
+    "@types/lodash": "^4.14.161",
     "@types/papaparse": "^5.2.2",
     "babel-jest": "^26.3.0",
     "boolean-parser": "0.0.2",
@@ -94,7 +95,7 @@
     "leaflet": "^1.5.1",
     "lirm": "0.0.1",
     "localforage": "^1.7.3",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.20",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "nomie-uom": "^1.0.2",
