--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "ts-jest": "^26.1.4",
     "ts-md5": "^1.2.7",
     "typescript": "^3.9.7",
+    "ua-parser": "^0.3.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "yargs-parser": "^18.1.3"
