feat: visual swiping between dashboards and tracker tabs

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
     "@commitlint/cli": "^9.1.2",
-    "@commitlint/config-conventional": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.2",
     "@kazzkiq/svelte-preprocess-scss": "^0.1.3",
     "@mya-zaki/advanced-search": "^1.0.0",
     "@release-it/conventional-changelog": "^1.1.4",
@@ -112,7 +112,7 @@
     "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-terser": "^5.3.1",
     "rollup-plugin-visualizer": "^2.6.0",
     "rollup-plugin-workbox": "^5.0.1",
     "sass-loader": "^7.1.0",
@@ -123,6 +123,7 @@
     "svelte": "^3.20.1",
     "svelte-awesome": "^1.4.1",
     "svelte-check": "^0.1.55",
+    "svelte-hammer": "^0.1.6",
     "svelte-hero-icons": "^1.0.5",
     "svelte-jester": "^1.1.2",
     "svelte-loader": "^2.13.6",
@@ -144,6 +145,7 @@
   "dependencies": {
     "@blockstack/connect": "^2.12.1",
     "@composi/gestures": "^1.0.9",
+    "@egjs/hammerjs": "^2.0.17",
     "blockstack": "^19.3.0",
     "bootstrap": "^4.3.1",
     "carbon-icons-svelte": "^10.9.3",
