--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nomie",
-  "version": "5.6.0-8",
+  "version": "5.6.0",
   "homepage": "https://nomie.app",
   "bugs": {
     "url": "https://github.com/open-nomie/nomie/issues",
