--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
     "@commitlint/cli": "^9.1.2",
-    "@commitlint/config-conventional": "^9.1.2",
+    "@commitlint/config-conventional": "^11.0.0",
     "@kazzkiq/svelte-preprocess-scss": "^0.1.3",
     "@mya-zaki/advanced-search": "^1.0.0",
     "@release-it/conventional-changelog": "^1.1.4",
@@ -111,7 +111,7 @@
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^5.3.1",
     "rollup-plugin-visualizer": "^2.6.0",
     "rollup-plugin-workbox": "^5.0.1",
@@ -138,7 +138,7 @@
     "ts-md5": "^1.2.7",
     "typescript": "^3.9.7",
     "ua-parser": "^0.3.5",
-    "webpack": "^4.43.0",
+    "webpack": "^5.11.1",
     "webpack-cli": "^3.3.11",
     "yargs-parser": "^18.1.3"
   },
@@ -151,7 +151,9 @@
     "carbon-icons-svelte": "^10.9.3",
     "chart.js": "^2.9.3",
     "nomie-utils": "^0.1.10",
+    "postcss": "^8.2.2",
     "pouchdb": "^7.1.1",
+    "rollup-plugin-postcss": "^4.0.0",
     "sortablejs": "^1.10.2"
   },
   "license": "MIT"
