chore: adding tailwind support

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/jest": "^26.0.8",
     "@types/lodash": "^4.14.161",
     "@types/papaparse": "^5.2.2",
+    "autoprefixer": "^10.4.0",
     "babel-jest": "^26.3.0",
     "blockstack": "^21.1.1",
     "boolean-parser": "0.0.2",
@@ -85,7 +86,7 @@
     "find-in-files": "^0.5.0",
     "git-cz": "^4.6.2",
     "git-release-notes": "^4.0.1",
-    "gitlog": "^4.0.0",
+    "gitlog": "^4.0.4",
     "html2canvas": "^1.0.0-rc.5",
     "husky": "^4.2.5",
     "i18next": "^17.0.16",
@@ -101,6 +102,7 @@
     "nomie-uom": "^1.0.2",
     "npm-run-all": "^4.1.5",
     "papaparse": "^5.3.0",
+    "postcss-load-config": "^3.1.0",
     "r-squared": "0.0.0",
     "release-it": "^13.6.6",
     "rollup": "^2.7.6",
@@ -134,6 +136,7 @@
     "svelte-spa-router": "^2.1.0",
     "svelte-spinner": "^2.0.1",
     "svg-inline-loader": "^0.8.2",
+    "tailwindcss": "^2.2.19",
     "ts-jest": "^26.1.4",
     "ts-md5": "^1.2.7",
     "typescript": "^3.9.7",
@@ -155,7 +158,7 @@
     "nomie-utils": "^0.1.10",
     "postcss": "^8.2.15",
     "pouchdb": "^7.1.1",
-    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-postcss": "^4.0.1",
     "sortablejs": "^1.10.2"
   },
   "license": "MIT"
