--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "typescript": "^3.9.7",
     "ua-parser": "^0.3.5",
     "vite": "^2.6.14",
+    "vite-svelte-jsx": "^1.1.0",
     "webpack": "^5.11.1",
     "webpack-cli": "^3.3.11",
     "yargs-parser": "^18.1.3"
