refactor: typescript, scss removal

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "skipLibCheck": true,
     "types": ["jest", "svelte"],
     "esModuleInterop": true,
-    "importsNotUsedAsValues": "remove",
+    "importsNotUsedAsValues": "error",
     "allowJs": true,
     "checkJs": true
   },
