--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
   "dependencies": {
     "@composi/gestures": "^1.0.9",
     "@egjs/hammerjs": "^2.0.17",
+    "@tailwindcss/line-clamp": "^0.2.2",
     "bootstrap": "^4.3.1",
     "carbon-icons-svelte": "^10.9.3",
     "chart.js": "^2.9.4",
