refactor: removing scss

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,12 @@
     "target": "esnext",
     "useDefineForClassFields": true,
     "module": "esnext",
+    "isolatedModules": true,
     "resolveJsonModule": true,
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
-    "types": ["jest", "svelte"],
+    "types": ["jest", "svelte", "vite/client"],
     "esModuleInterop": true,
     "importsNotUsedAsValues": "error",
     "allowJs": true,
