--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "npm run build"
-  publish = "public"
+  command = "npm run vbuild"
+  publish = "dist"
 [[redirects]]
   from = "/*"
   to = "/"
