--- a/package.json
+++ b/package.json
@@ -103,6 +103,8 @@
     "r-squared": "0.0.0",
     "release-it": "^13.6.6",
     "rollup": "^2.7.6",
+    "rollup-plugin-analyzer": "^4.0.0",
+    "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-json": "^4.0.0",
@@ -110,6 +112,7 @@
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-sizes": "^1.0.4",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^5.3.1",
     "rollup-plugin-visualizer": "^2.6.0",
