--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "git-cz": "^4.6.2",
     "git-release-notes": "^4.0.1",
     "gitlog": "^4.0.4",
-    "html2canvas": "^1.0.0-rc.5",
+    "html2canvas": "^1.3.3",
     "husky": "^4.2.5",
     "i18next": "^17.0.16",
     "jest": "^26.4.0",
