feat: ionic 5 icon set

--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "vite": "^2.6.14",
     "vite-plugin-package-version": "^1.0.2",
     "vite-plugin-pwa": "^0.11.6",
+    "vite-plugin-svelte-svg": "^1.0.0",
     "vite-svelte-jsx": "^1.1.0",
     "webpack": "^5.11.1",
     "webpack-cli": "^3.3.11",
@@ -160,6 +161,7 @@
     "bootstrap": "^4.3.1",
     "carbon-icons-svelte": "^10.9.3",
     "chart.js": "^2.9.4",
+    "ionicons": "^6.0.0",
     "nomie-utils": "^0.1.10",
     "postcss": "^8.2.15",
     "pouchdb": "^7.2.2",
