--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "@egjs/hammerjs": "^2.0.17",
     "@tailwindcss/line-clamp": "^0.2.2",
     "bootstrap": "^4.3.1",
+    "canvas-confetti": "^1.4.0",
     "carbon-icons-svelte": "^10.9.3",
     "chart.js": "^2.9.4",
     "ionicons": "^6.0.0",
